# Cam-Surveillance-tool

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  client.cpp  installation.sh  main.cpp  server.cpp
